[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GameInfo.gd" type="Script" id=1]
[ext_resource path="res://actors/defender.png" type="Texture" id=2]

[node name="GameInfo" type="Control"]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="RichTextLabel" parent="."]
margin_left = 192.0
margin_top = 556.0
margin_right = 232.0
margin_bottom = 596.0
text = "3"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="RichTextLabel" parent="."]
margin_left = 256.0
margin_top = 12.0
margin_right = 320.0
margin_bottom = 36.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 320.0
margin_top = 12.0
margin_right = 384.0
margin_bottom = 36.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="RichTextLabel" parent="."]
margin_left = 384.0
margin_top = 12.0
margin_right = 472.0
margin_bottom = 36.0
text = "High Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="RichTextLabel" parent="."]
margin_left = 472.0
margin_top = 12.0
margin_right = 536.0
margin_bottom = 36.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life_icons" type="Node2D" parent="."]

[node name="life1" type="Sprite" parent="life_icons"]
modulate = Color( 0.254902, 0.705882, 0, 1 )
position = Vector2( 232, 556 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="life2" type="Sprite" parent="life_icons"]
modulate = Color( 0.254902, 0.705882, 0, 1 )
position = Vector2( 272, 556 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
